black-white image reconstruction
-transformed image to reduce it in the PCA space
-reconstructed image from its reduced PCA representation back to the original feature space (reversed PCA transformation)
-performed inverse scaling to bring the data back to its original range
-reshaped reconstructed image to match the original image dimensions

--- a/part_two.ipynb
+++ b/part_two.ipynb
@@ -266,11 +266,66 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "Провести реконструкцію чорно-білого зображення, використовуючи обмежену кількість компонентів, знайдену в попередньому кроці. Вивести отримане зображення.",
+   "id": "be2bf9a0d9d5c80"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "cb1e8ef77625560a"
+   "source": [
+    "# Transform and inverse transform the image using the limited number of components\n",
+    "pca = PCA(n_components=num_components)\n",
+    "image_rows_reduced = pca.fit_transform(image_rows_scaled)\n",
+    "image_rows_reconstructed = pca.inverse_transform(image_rows_reduced)\n",
+    "\n",
+    "# Inverse scaling\n",
+    "image_rows_reconstructed = scaler.inverse_transform(image_rows_reconstructed)\n",
+    "\n",
+    "# Reshape the reconstructed rows back to the original image shape\n",
+    "image_reconstructed = image_rows_reconstructed.reshape(image_bw.shape)\n",
+    "\n",
+    "# Display the reconstructed image\n",
+    "plt.imshow(image_reconstructed, cmap='gray')\n",
+    "plt.title(f'Reconstructed image using {num_components} PCA components')\n",
+    "plt.show()"
+   ],
+   "id": "f784058a9c28ae66",
+   "outputs": []
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Проведіть реконструкцію зображення для різної кількості компонент та виведіть відповідні результати. ",
+   "id": "cf96b30e3705e52e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "# Components to visualize\n",
+    "components_list = [5, 15, 25, 75, 100, 170]\n",
+    "\n",
+    "# Plot reconstructed images for different numbers of components\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "for i, n_components in enumerate(components_list):\n",
+    "    pca = PCA(n_components=n_components)\n",
+    "    image_rows_reduced = pca.fit_transform(image_rows_scaled)\n",
+    "    image_rows_reconstructed = pca.inverse_transform(image_rows_reduced)\n",
+    "    image_rows_reconstructed = scaler.inverse_transform(image_rows_reconstructed)\n",
+    "    image_reconstructed = image_rows_reconstructed.reshape(image_bw.shape)\n",
+    "    \n",
+    "    plt.subplot(2, 3, i + 1)\n",
+    "    plt.imshow(image_reconstructed, cmap='gray')\n",
+    "    plt.title(f'Components: {n_components}')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "id": "eae5929969295fb3",
+   "outputs": []
   }
  ],
  "metadata": {
