--- a/part_two.ipynb
+++ b/part_two.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-16T15:21:52.107920Z",
-     "start_time": "2024-06-16T15:21:52.092398Z"
+     "end_time": "2024-06-16T16:40:31.187860Z",
+     "start_time": "2024-06-16T16:40:31.140778Z"
     }
    },
    "cell_type": "code",
@@ -12,11 +12,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "from objects import image"
    ],
    "id": "40efca5ddf79a3cb",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -27,14 +29,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-16T15:24:42.129802Z",
-     "start_time": "2024-06-16T15:24:41.818511Z"
+     "end_time": "2024-06-16T16:40:39.145255Z",
+     "start_time": "2024-06-16T16:40:37.751400Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Load the image and get a vector consisting dimensions and color channels number\n",
-    "image_raw = plt.imread('image.png')\n",
+    "image_raw = plt.imread(image)\n",
     "print(\"Original image shape and color channels:\", image_raw.shape)\n",
     "\n",
     "# Display the original image\n",
@@ -62,7 +64,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 13
+   "execution_count": 24
   },
   {
    "metadata": {},
